# convo_trainer

./: .gitignore  ReadMe.md  conversations.json  main.py  pyproject.toml  vocabulary_progress.py
convo-trainer/: index.html  package-lock.json  package.json
convo-trainer/src/: App.vue
convo-trainer/src/components/: ConvoTrainer.vue  ProgressGrid.vue  ProgressStats.vue  VoiceInput.vue
convo_trainer/: extract_subs.py  main.py
